@@ -2,23 +2,27 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>CFBundleDevelopmentRegion</key>
+  <string>English</string>
   <key>CFBundleExecutable</key>
-  <string>opsi-script-nogui</string>
+  <string>opsiclientd_event_starter</string>
+  <key>CFBundleName</key>
+  <string>opsiclientd_event_starter</string>
   <key>CFBundleIdentifier</key>
-  <string>org.opsi.opsi-script-nogui</string>
+  <string>org.opsi.opsiclientd_event_starter</string>
   <key>CFBundleInfoDictionaryVersion</key>
   <string>6.0</string>
   <key>CFBundlePackageType</key>
   <string>APPL</string>
-  <key>CFBundleName</key>
-  <string>opsi-script-nogui</string>
+  <key>CFBundleSignature</key>
+  <string>opsi</string>
   <key>CFBundleShortVersionString</key>
-  <string>4.12.3.11</string>
+  <string>4.1.0.1</string>
   <key>CFBundleVersion</key>
   <string>1</string>
-  <key>CFBundleSupportedPlatforms</key>
-  <array>
-    <string>MacOSX</string>
-  </array>
+  <key>CSResourcesFileMapped</key>
+  <true/>
+  <key>NSHighResolutionCapable</key>
+  <true/>
 </dict>
 </plist>
