@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -20,9 +20,9 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
-      <RevisionNr Value="7"/>
-      <BuildNr Value="2"/>
-      <StringTable CompanyName="uib gmbh" FileDescription="opsiclientd_event_starter" InternalName="opsiclientd_event_starter" LegalCopyright="AGPLv3" LegalTrademarks="opsi, opsi.org, open pc server integration" OriginalFilename="opsiclientd_event_starter" ProductName="opsi" ProductVersion="4.0.7"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="1"/>
+      <StringTable CompanyName="uib gmbh" FileDescription="opsiclientd_event_starter" InternalName="opsiclientd_event_starter" LegalCopyright="AGPLv3" LegalTrademarks="opsi, opsi.org, open pc server integration" OriginalFilename="opsiclientd_event_starter" ProductName="opsi" ProductVersion="4.1"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
@@ -35,7 +35,7 @@
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
-            <OtherUnitFiles Value="indy;synapse40lib;..\..\common"/>
+            <OtherUnitFiles Value="..\..\common;..\..\external_libraries\synapse"/>
             <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <Parsing>
@@ -57,6 +57,10 @@
               <UseHeaptrc Value="True"/>
               <UseExternalDbgSyms Value="True"/>
             </Debugging>
+            <Options>
+              <PassLinkerOptions Value="True"/>
+              <LinkerOptions Value="-sectcreate __TEXT __info_plist Info.plist"/>
+            </Options>
           </Linking>
           <Other>
             <CustomOptions Value="-dOPSICLIENTD_SHUTDOWN_STARTER"/>
@@ -76,7 +80,7 @@
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
             <Libraries Value="..\..\external_libraries\indy\Lib"/>
-            <OtherUnitFiles Value="..\..\common;..\..\external_libraries\synapse40lib;..\..\external_libraries\indy;..\..\external_libraries\indy\Lib;..\..\external_libraries\indy\Lib\Core;..\..\external_libraries\indy\Lib\System;..\..\external_libraries\indy\Lib\Protocols"/>
+            <OtherUnitFiles Value="..\..\common;..\..\external_libraries\synapse"/>
             <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <CodeGeneration>
@@ -92,6 +96,10 @@
               <StripSymbols Value="True"/>
             </Debugging>
             <LinkSmart Value="True"/>
+            <Options>
+              <PassLinkerOptions Value="True"/>
+              <LinkerOptions Value="-sectcreate __TEXT __info_plist Info.plist"/>
+            </Options>
           </Linking>
           <Other>
             <CustomOptions Value="-dOPSICLIENTD_SHUTDOWN_STARTER"/>
@@ -106,19 +114,17 @@
       <Version Value="2"/>
     </PublishOptions>
     <RunParams>
-      <local>
-        <FormatVersion Value="1"/>
-      </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default"/>
+      </Modes>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="1">
       <Item1>
-        <PackageName Value="indylaz"/>
-      </Item1>
-      <Item2>
         <PackageName Value="LCLBase"/>
-      </Item2>
+      </Item1>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="8">
       <Unit0>
         <Filename Value="opsiclientd_event_starter.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -139,6 +145,18 @@
         <Filename Value="..\..\common\osjson.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="Info.plist"/>
+        <IsPartOfProject Value="True"/>
+      </Unit5>
+      <Unit6>
+        <Filename Value="notarize_ocdes.bash"/>
+        <IsPartOfProject Value="True"/>
+      </Unit6>
+      <Unit7>
+        <Filename Value="opsi.entitlements"/>
+        <IsPartOfProject Value="True"/>
+      </Unit7>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -149,9 +167,15 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="..\..\common;..\..\external_libraries\synapse40lib;..\..\external_libraries\indy"/>
+      <OtherUnitFiles Value="..\..\common;..\..\external_libraries\synapse;..\..\external_libraries\misc"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Linking>
+      <Options>
+        <PassLinkerOptions Value="True"/>
+        <LinkerOptions Value="-sectcreate __TEXT __info_plist Info.plist"/>
+      </Options>
+    </Linking>
     <Other>
       <CustomOptions Value="-dOPSICLIENTD_SHUTDOWN_STARTER"/>
     </Other>
