@@ -13,7 +13,9 @@
   <key>CFBundleName</key>
   <string>opsi-script</string>
   <key>CFBundleShortVersionString</key>
-  <string>4.12.3.10</string>
+  <string>4.12.3.11</string>
+  <key>CFBundleIconFile</key>
+  <string>opsi.icns</string>
   <key>CFBundleVersion</key>
   <string>1</string>
   <key>CFBundleSupportedPlatforms</key>
