@@ -5,6 +5,14 @@ mac getIpByName liefert name von IPnum
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.3.11) experimental; urgency=low
+
+  * oswebservice: new function macosAgentActivated: boolean;
+  * osmain: on macos: check macosAgentActivated
+  * Info-os.plist: add opsi.icns file
+
+-- Detlef Oertel <d.oertel@uib.de>  Wed, 26 Feb 2020:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.3.10) experimental; urgency=low
 
   * activate history logging again
